# emenus-smart-tags

./: .gitignore  README.md  index.html  package-lock.json  package.json  requirements.txt  vercel.json
api/: index.py
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: tag_routes.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  base.py  customer_profile.py
backend/app/schemas/: tagging.py
backend/app/services/: ai_tagging_service.py  notification_service.py  unit_of_work.py
backend/tests/: test_ai_tagging_service.py  test_schemas.py  test_tag_routes.py
frontend/src/components/: SmartTagBadge.tsx
src/: App.tsx  index.css
src/components/: Layout.tsx  ResultCard.tsx  SmartTagBadge.tsx
src/lib/: api.ts  types.ts
src/pages/: AnalyzePage.tsx  DashboardPage.tsx  HistoryPage.tsx  SettingsPage.tsx
